--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,20 @@
 body {
     background-color: rgb(233, 233, 241);
+    margin: 0;
+    padding: 0;
 }
 
 img {
-    margin: 2em;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.container {
+    padding: 2em;
+    width: calc(100vw - 4em);
+    height: calc(100vh - 4em);
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 10px 10px;
+    grid-template: repeat(10, 1fr) / repeat(10, 1fr);
 }
