--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,13 @@ body {
 img {
     max-width: 100%;
     max-height: 100%;
+    transition: all 2s;
+    position: relative;
+}
+
+img.test {
+    height: 400px;
+    max-height: 400px;
 }
 
 .container {
@@ -19,8 +26,6 @@ img {
     grid-template: repeat(10, 1fr) / repeat(10, 1fr);
 }
 
-.random {
-    position: absolute;
-    top: 2em;
-    left: 2em;
+.in {
+    opacity: 0;
 }
