--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,15 @@ body {
 img {
     max-width: 200px;
     transition: all 2s;
-    margin-top: 1em;
+    padding: 1em;
 }
+
+.grid img {
+    max-width: 100%;
+    max-height: 100%;
+    padding: 0;
+}
+
 
 img.test {
     width: 400px;
@@ -24,3 +31,11 @@ img.test {
     align-items: flex-end;
  }
 
+.grid {
+    padding: 2em;
+    width: calc(100vw - 4em);
+    height: calc(100vh - 4em);
+    display: grid;
+    grid-gap: 10px 10px;
+    grid-template: repeat(15, 1fr) / repeat(15, 1fr);
+}
